; ModuleID = '/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_cpu_machdep.c_cpu_idle_wakeup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/x86/x86/extr_cpu_machdep.c_cpu_idle_wakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.monitorbuf = type { i32 }
%struct.TYPE_2__ = type { %struct.monitorbuf }

@cpu_idle_apl31_workaround = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"bad monitor state\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @cpu_idle_wakeup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.monitorbuf*, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.TYPE_2__* @pcpu_find(i32 %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  store %struct.monitorbuf* %8, %struct.monitorbuf** %4, align 8
  %9 = load %struct.monitorbuf*, %struct.monitorbuf** %4, align 8
  %10 = getelementptr inbounds %struct.monitorbuf, %struct.monitorbuf* %9, i32 0, i32 0
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @atomic_load_int(i32* %11)
  switch i32 %12, label %22 [
    i32 128, label %13
    i32 130, label %14
    i32 129, label %21
  ]

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

14:                                               ; preds = %1
  %15 = load i32*, i32** %5, align 8
  %16 = call i32 @atomic_store_int(i32* %15, i32 129)
  %17 = load i32, i32* @cpu_idle_apl31_workaround, align 4
  %18 = icmp ne i32 %17, 0
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i32 0, i32 1
  store i32 %20, i32* %2, align 4
  br label %24

21:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %24

22:                                               ; preds = %1
  %23 = call i32 @panic(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %21, %14, %13
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.TYPE_2__* @pcpu_find(i32) #1

declare dso_local i32 @atomic_load_int(i32*) #1

declare dso_local i32 @atomic_store_int(i32*, i32) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
